stream added profile added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,56 @@
     <string name="qiziqarli_mahsulotlar">Qiziqarli mahsulotlar</string>
     <string name="barcha_mahsulotlar">Barcha mahsulotlar</string>
     <string name="ilovadan_foydalanish_uchun_internetga_ulaning">Ilovadan foydalanish uchun internetga ulaning</string>
+    <string name="tasdiqlash_kodi_ushbu_raqamga_yuborildi">Tasdiqlash kodi ushbu raqamga yuborildi</string>
+    <string name="iltimos_tasdiqlash_kodini_toliq_kiriting">Iltimos tasdiqlash kodini to\'qliq kiriting</string>
+    <string name="ismingiz">Ismingiz</string>
+    <string name="familiyangiz">Familiyangiz</string>
+    <string name="erkak">Erkak</string>
+    <string name="ayol">Ayol</string>
+    <string name="tug_ulgan_sanangiz">Tug\'ilgan sanangiz</string>
+    <string name="saqlash">Saqlash</string>
+    <string name="ismingizni_kiriting">Ismingizni kiriting!</string>
+    <string name="familiyangizni_kiriting">Familiyangizni kiriting</string>
+    <string name="tugulgan_kuningizni_kiriting">Tug\'ulgan kuningizni kiriting</string>
+    <string name="saqlanmoqda">Saqlanmoqda...</string>
+    <string name="saqlandi">Saqlandi</string>
+    <string name="shaxsiy_ma_lumotlar">Shaxsiy ma\'lumotlar</string>
+    <string name="mahsulotlar">Mahsulotlar</string>
+    <string name="statistika">Statistika</string>
+    <string name="konkurs">Konkurs</string>
+    <string name="marja_market">Marja market</string>
+    <string name="mablag_ni_yechish">Mablag\'ni yechish</string>
+    <string name="chiqish">Chiqish</string>
+    <string name="kirish">Kirish</string>
+    <string name="royxatdan_otish">Ro\'yxatdan o\'tish</string>
+    <string name="ok">Ok</string>
+    <string name="tizimdan_chiqish">Tizimdan chiqish</string>
+    <string name="siz_rostdan_chiqmoqchimisiz">Siz rostdan ham tizimdan chiqmoqchimisiz?</string>
+    <string name="profil">Profil</string>
+    <string name="hold_balans">Hold Balans</string>
+    <string name="marja_balans">Marja Balans</string>
+    <string name="siz_sotdingiz">Siz sotdingiz</string>
+    <string name="ta">ta</string>
+    <string name="yangi">Yangi</string>
+    <string name="qabul_qilindi">Qabul qilindi</string>
+    <string name="yetkazib_berildi">Yetkazib berildi</string>
+    <string name="yetkazilmoqda">Yetkazilmoqda</string>
+    <string name="spam">Spam</string>
+    <string name="arxiv">Arxiv</string>
+    <string name="arxivlanmoqda">Arxivlanmoqda</string>
+    <string name="bekor_qilindi">Bekor qilindi</string>
+    <string name="qayta_qongiroq">Qayta qo\'ng\'iroq</string>
+    <string name="xisobotlar">Xisobotlar</string>
+    <string name="reklama_posti">Reklama posti</string>
+    <string name="oqim_yaratish">Oqim yaratish</string>
+    <string name="narx">Narx</string>
+    <string name="bonus">Bonus</string>
+    <string name="qoldi">Qoldi</string>
+    <string name="marja">Marja</string>
+    <string name="url_mavjud_emas">URL mavjud emas!</string>
+    <string name="oddiy_sahifa">Oddiy sahifa</string>
+    <string name="mahsus_sahifa">Mahsus sahifa</string>
+    <string name="oqimlar">Oqimlar</string>
+    <string name="sizda_oqimlar_mavjud_emas">Sizda oqimlar mavjud emas</string>
+    <string name="sahifa_nusxalandi">Sahifa nusxalandi</string>
 </resources>
