--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="ismingizni_kiriting">Ismingizni kiriting!</string>
     <string name="familiyangizni_kiriting">Familiyangizni kiriting</string>
     <string name="tugulgan_kuningizni_kiriting">Tug\'ulgan kuningizni kiriting</string>
-    <string name="saqlanmoqda">Saqlanmoqda...</string>
+    <string name="saqlanmoqda">Saqlanmoqda…</string>
     <string name="saqlandi">Saqlandi</string>
     <string name="shaxsiy_ma_lumotlar">Shaxsiy ma\'lumotlar</string>
     <string name="mahsulotlar">Mahsulotlar</string>
@@ -45,7 +45,7 @@
     <string name="chiqish">Chiqish</string>
     <string name="kirish">Kirish</string>
     <string name="royxatdan_otish">Ro\'yxatdan o\'tish</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="tizimdan_chiqish">Tizimdan chiqish</string>
     <string name="siz_rostdan_chiqmoqchimisiz">Siz rostdan ham tizimdan chiqmoqchimisiz?</string>
     <string name="profil">Profil</string>
@@ -92,4 +92,36 @@
     <string name="izoh">Izoh</string>
     <string name="sana">Sana</string>
     <string name="savdo_tarixi">Savdo tarixi</string>
+    <string name="mablag_miqdori">Mablag\' miqdori</string>
+    <string name="karta_raqami">Karta raqami</string>
+    <string name="bajarilmoqda">Bajarilmoqda</string>
+    <string name="sorov_yuborildi">So\'rov yuborildi</string>
+    <string name="karta_raqamini_toliq_kiriting">Karta raqamini to\'liq kiriting!</string>
+    <string name="sorovingiz_qabul_qilindi">So\'rovingiz qabul qilindi</string>
+    <string name="kamida_40000_yechishingiz_mumkin">Kamida 40,000 so\'m yechishingiz mumkin</string>
+    <string name="orqaga">Orqaga</string>
+    <string name="xatolik">Xatolik</string>
+    <string name="muvaffaqiyatli">Muvaffaqiyatli</string>
+    <string name="to_lovlar_tarixi">To\'lovlar tarixi</string>
+    <string name="miqdor">Miqdor</string>
+    <string name="hisob_raqam">Hisob raqam</string>
+    <string name="tolovlar_amalga_oshirilmagan">Pul o\'tkazmalari amalga oshirilmagan</string>
+    <string name="viloyatingizni_tanlang">Viloyatingizni tanlang</string>
+    <string name="sizning_ma_lumotlaringiz">Sizning ma\'lumotlaringiz</string>
+    <string name="mahsulot_haqida">Mahsulot haqida</string>
+    <string name="buyurtma_haqida">Buyurtma haqida</string>
+    <string name="buyurtma_berish">Buyurtma berish</string>
+    <string name="mahsulot_nomi">Mahsulot nomi</string>
+    <string name="umumiy_narx">Umumiy narx</string>
+    <string name="mahsulot_soni">Mahsulot soni</string>
+    <string name="buyurtmangiz_qabul_qilindi">Buyurtmangiz qabul qilindi! Haridingiz uchun rahmat</string>
+    <string name="malumotlar_yangilandi">Ma\'lumotlar yangilandi</string>
+    <string name="hozircha_marjalar_mavjud_emas">Hozircha marja mahsulotlar mavjud emas</string>
+    <string name="boshlanish_sanasi">Boshlanish sanasi</string>
+    <string name="yakunlanish_sanasi">Yakunlanish sanasi</string>
+    <string name="konkurs_natijalari">Konkurs natijalari</string>
+    <string name="orin">O\'rin</string>
+    <string name="sotuvchi">Sotuvchi</string>
+    <string name="sotildi">sotildi</string>
+    <string name="hozircha_konkurslar_mavjud_emas">Hozircha konkurslar mavjud emas</string>
 </resources>
