--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,4 +126,5 @@
     <string name="hozircha_konkurslar_mavjud_emas">Hozircha konkurslar mavjud emas</string>
     <string name="oddiy_telegram_posti">Oddiy telegram posti</string>
     <string name="mahsus_telegram_posti">Mahsus telegram posti</string>
+    <string name="jami">Jami</string>
 </resources>
