--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="barcha_mahsulotlar">Barcha mahsulotlar</string>
     <string name="ilovadan_foydalanish_uchun_internetga_ulaning">Ilovadan foydalanish uchun internetga ulaning</string>
     <string name="tasdiqlash_kodi_ushbu_raqamga_yuborildi">Tasdiqlash kodi ushbu raqamga yuborildi</string>
-    <string name="iltimos_tasdiqlash_kodini_toliq_kiriting">Iltimos tasdiqlash kodini to\'qliq kiriting</string>
+    <string name="iltimos_tasdiqlash_kodini_toliq_kiriting">Iltimos tasdiqlash kodini to\'liq kiriting</string>
     <string name="ismingiz">Ismingiz</string>
     <string name="familiyangiz">Familiyangiz</string>
     <string name="erkak">Erkak</string>
