--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,6 @@
     <string name="arxivlandi">Arxivlandi</string>
     <string name="buyirtmachi">Buyirtmachi</string>
     <string name="manzil">Manzil</string>
+    <string name="oqim">Oqim</string>
+    <string name="operator">Operator</string>
 </resources>
